--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "simple-mediator"
-version = "0.1.1"
+version = "0.1.2"
 description = "A mediator implementation in Python"
 readme = "README.md"
 authors = [{ name = "Osvaldo Cordova Aburto", email = "oca159@gmail.com" }]
@@ -23,6 +23,9 @@ classifiers = [
   'Intended Audience :: Developers',
   'Topic :: Software Development :: Libraries',
 ]
+
+[project.urls]
+Repository = "https://github.com/oca159/simple_mediator"
 
 [build-system]
 requires = ["hatchling"]
