feat: add NextRequestCallable

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "simple-mediator"
-version = "0.1.4"
+version = "0.1.5"
 description = "A mediator implementation in Python"
 readme = "README.md"
 authors = [{ name = "Osvaldo Cordova Aburto", email = "oca159@gmail.com" }]
@@ -70,3 +70,50 @@ exclude = [
   "site-packages",
   "venv",
 ]
+
+
+[tool.ruff.lint]
+# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
+# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
+# McCabe complexity (`C901`) by default.
+select = ["E4", "E7", "E9", "F"]
+ignore = ["E402"]
+
+# Allow fix for all enabled rules (when `--fix`) is provided.
+fixable = ["ALL"]
+unfixable = []
+
+# Allow unused variables when underscore-prefixed.
+dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+
+[tool.ruff.format]
+# Like Black, use double quotes for strings.
+quote-style = "double"
+# Like Black, indent with spaces, rather than tabs.
+indent-style = "space"
+# Like Black, respect magic trailing commas.
+skip-magic-trailing-comma = false
+# Like Black, automatically detect the appropriate line ending.
+line-ending = "auto"
+
+
+[tool.pyright]
+include = ["src"]
+exclude = ["**/node_modules", "**/__pycache__", "**/tests"]
+stubPath = "src/stubs"
+
+reportMissingImports = true
+disableBytesTypePromotions = false
+disableTaggedHints = false
+reportMissingTypeStubs = false
+
+executionEnvironments = [{ root = "." }]
+
+venvPath = "."
+venv = ".venv"
+
+
+[tool.bandit]
+recursive = true
+targets = ["src"]
+exclude_dirs = [".venv", "tests"]
