--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -16,17 +16,18 @@ jobs:
 
       - uses: actions/setup-python@v5
         with:
-          python-version: "3.x"
+          python-version: '3.x'
 
       - name: Install uv
         run: |
           curl -LsSf https://astral.sh/uv/install.sh | sh
           echo "$HOME/.cargo/bin" >> $GITHUB_PATH
 
-      - name: Build release distributions
+      - name: Set up virtual environment and build release distributions
         run: |
+          uv venv
+          . .venv/bin/activate
           uv pip install build
-          uv pip install --system build
           python -m build
 
       - name: Upload distributions
